# paramedic-triage-app

./: .gitignore  README.md  docker-compose.yml  pyrightconfig.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_triage_records.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: triage.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: session.py
backend/app/dependencies/: services.py
backend/app/middleware/: request_logging.py
backend/app/models/: triage.py
backend/app/repositories/: triage.py
backend/app/schemas/: triage.py
backend/app/services/: triage.py
backend/tests/: conftest.py  test_triage_api.py
backend/typings/structlog/: __init__.pyi
mobile/: .env.example  .watchmanconfig  App.tsx  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
mobile/__tests__/: syncService.test.ts  triageApi.test.ts  triageValidation.test.ts
mobile/scripts/: check-node-version.js
mobile/src/components/: PrioritySelector.tsx  SyncBanner.tsx
mobile/src/database/: triageDatabase.ts
mobile/src/hooks/: useSyncWorker.ts
mobile/src/navigation/: RootNavigator.tsx
mobile/src/screens/: TriageScreen.tsx
mobile/src/services/api/: triageApi.ts
mobile/src/store/: store.ts  triageSlice.ts
mobile/src/types/: triage.ts
mobile/src/utils/: priority.ts  triageValidation.ts
(+1 files in other folders)
