[project]
name = "paramedic-triage-backend"
version = "0.1.0"
description = "FastAPI backend for offline-first paramedic triage intake"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "greenlet>=3.1.1",
    "pydantic-settings>=2.5.2",
    "sqlalchemy>=2.0.35",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "black>=24.8.0",
    "httpx>=0.27.2",
    "isort>=5.13.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.8",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
